# hass-onkyo-extended

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Pioneer_Batch1.yml  Pioneer_Batch2.yml  Pioneer_Batch3.txt  Pioneer_VSX_831.yml  Pioneer_VSX_932.yml  Pioneer_VSX_933.yml  README.md  all_models.txt  debug_eiscp.py  eiscp_commands_dump.yaml  eiscp_commands_filtered.yaml  eiscp_commands_node.json  eiscp_controller.js  generate_model_mapping.py  onkyo reciever list.yml  pyproject.toml  requirements_test.txt
.github/workflows/: check-lint.yml  tests.yml
custom_components/onkyo/: __init__.py  config_flow.py  connection.py  const.py  coordinator.py  dcp.py  helpers.py  manifest.json  media_player.py  onkyo_model_mapping.py  receiver_profiles.py  services.yaml
script/: setup
tests/: conftest.py  test_config_flow.py  test_connection.py  test_helpers.py  test_init.py  test_media_player.py  test_media_player_coverage.py  test_media_player_extended.py  test_media_player_presets.py  test_media_player_services.py  test_model_sources.py  test_performance_improvements.py  test_receiver_profiles.py  test_source_bug.py  test_volume.py
